# repoexec

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/plans/: 2026-05-22-repoexec-mvp.md
examples/: github-agent-workflow.sh  policy.json
repoexec/: __init__.py  api.py  approval.py  cli.py  config.py  models.py  policy.py  runner.py  service.py  store.py  trace_view.py
tests/: test_api.py  test_approval.py  test_cli.py  test_policy.py  test_runner.py  test_store.py  test_trace_view.py
