[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoexec"
version = "0.1.0"
description = "GitHub-native execution layer for coding agents with policy checks and run traces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.9",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
repoexec = "repoexec.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["repoexec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
